--- a/src/main/webapp/script/caso/Create_preentrega.xhtml
+++ b/src/main/webapp/script/caso/Create_preentrega.xhtml
@@ -191,6 +191,7 @@
 
                                     <pe:ckEditor value="#{casoController.selected.descripcion}"
                                                  toolbar="#{applicationBean.ckEditorToolbar}"
+                                                 customConfig="#{request.contextPath}/resources/js/ckeditor.js"
                                                  id="descripcion" width="600" height="120"
                                                  required="true"/>
 
