--- a/src/main/webapp/script/reglaTrigger/Edit.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Edit.xhtml
@@ -298,6 +298,7 @@
                         </h:panelGrid>
                         <pe:ckEditor value="#{reglaTriggerController.emailTemp.body}"
                                      toolbar="#{applicationBean.ckEditorToolbar}"
+                                     customConfig="#{request.contextPath}/resources/js/ckeditor.js"
                                      id="respuesta" width="560" height="190"/>
 
 
