--- a/src/main/webapp/script/caso/Create.xhtml
+++ b/src/main/webapp/script/caso/Create.xhtml
@@ -212,6 +212,7 @@
 
                                     <pe:ckEditor value="#{casoController.selected.descripcion}"
                                                 toolbar="#{applicationBean.ckEditorToolbar}"
+                                                customConfig="#{request.contextPath}/resources/js/ckeditor.js"
                                                  id="descripcion" width="600px" height="210"/>
 
                                     <p:outputLabel value="Archivos Adjuntos:" for="fileupload" style="font-weight:bold"/>
