--- a/src/main/webapp/script/caso/responder.xhtml
+++ b/src/main/webapp/script/caso/responder.xhtml
@@ -107,6 +107,7 @@
 
                 <pe:ckEditor id="textonota" value="#{casoController.textoNota}" language="es"
                              toolbar="#{applicationBean.ckEditorToolbar}"
+                             customConfig="#{request.contextPath}/resources/js/ckeditor.js"
                              width="100%" />
 
                 <p:message for="textonota"/>
