--- a/src/main/webapp/script/reportChart/Edit.xhtml
+++ b/src/main/webapp/script/reportChart/Edit.xhtml
@@ -32,12 +32,12 @@
                     <p:panelGrid columns="2" rendered="#{reportChartController.selected != null}">
 
                         <p:outputLabel value="#{bundle.EditReportChartLabel_chartType}" for="chartType" />
-                        <p:inputText id="chartType" value="#{reportChartController.selected.chartType}" 
-                                     title="#{bundle.EditReportChartTitle_chartType}" 
-                                     required="true" requiredMessage="#{bundle.EditReportChartRequiredMessage_chartType}"/>
+                        <go:selectChartType id="chartType" value="#{reportChartController.selected.chartType}" 
+                                            required="true" requiredMessage="#{bundle.EditReportChartRequiredMessage_chartType}"
+                                            />
 
                         <p:outputLabel value="#{bundle.EditReportChartLabel_baseEntityType}" for="baseEntityType" />
-                     
+
 
 
                         <go:selectEntityType id="baseEntityType" value="#{reportChartController.selected.baseEntityType}"
@@ -56,7 +56,19 @@
                 </p:panel>
 
                 <p:panel id="serieBase" rendered="#{not empty reportChartController.selected.baseEntityType}">
-                    <go:entityCriteria id="seriesBase"  filterHelper="#{reportChartController.filterHelperForSelectedEntityType}" filtro="#{reportChartController.filtroBaseSeries}"/>
+                    <go:entityCriteria id="seriesBase" 
+                                       filterHelper="#{reportChartController.filterHelperForSelectedEntityType}" 
+                                       filtro="#{reportChartController.filtroBaseSeries}"/>
+                </p:panel>
+
+                <p:panel id="series" rendered="#{not empty reportChartController.selected.baseEntityType}">
+                    <go:filterView id="seriesCriterias" 
+                                   controllerMBean="#{reportChartController}" 
+                                   showApplyAction="false" showEdit="false" showSaveAs="false" showSearchBar="false"
+                                   vista="#{reportChartController.vista}"
+                                   filterHelper="#{reportChartController.filterHelperForSelectedEntityType}" 
+                                   canChangeFilters="true"
+                                   update=":mainform:messages"/>
                 </p:panel>
 
                 <br/>
