--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -13,7 +13,9 @@
             <meta http-equiv="Pragma" content="no-cache" />
             <meta http-equiv="Expires" content="0" />
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <title>#{applicationBean.helpdeskTitle}</title>           
+            <title>#{applicationBean.helpdeskTitle}</title>      
+            
+            <ui:include src="newRelicScript.xhtml"/>
 
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
             <h:outputStylesheet library="awesome" name="css/font-awesome.css"/>
