--- a/src/main/webapp/resources/go/casoList.xhtml
+++ b/src/main/webapp/resources/go/casoList.xhtml
@@ -17,7 +17,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <h:form id="casosList" rendered="#{cc.attrs.casosList.size() gt 0}">
+        <h:form id="casosList">
 
             <h:panelGroup id="panelG1">
                 <p:dataTable id="ID_TABLA" value="#{cc.attrs.casosList}" var="item"
@@ -62,7 +62,7 @@
 
                             <h:outputText styleClass="ticket-status" style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"/>
 
-                            <p:commandLink id="temalink" action="#{casoController.prepareEditCaso(item.idCaso.toString())}" 
+                            <p:commandLink action="#{casoController.prepareEditCaso(item.idCaso.toString())}" 
                                            ajax="false" style="color: #000" immediate="true">
                                 #{item.tipoCaso.nombre} \##{item.idCaso} #{item.tema}
                             </p:commandLink>
