--- a/src/main/webapp/customer/template_index.xhtml
+++ b/src/main/webapp/customer/template_index.xhtml
@@ -142,7 +142,7 @@
                                 <li>
                                     <h:commandLink 
                                         action="inbox">
-                                        <span class="glyphicon glyphicon-user"></span> Login Agentes
+                                        <span class="glyphicon glyphicon-user"></span> Login
                                     </h:commandLink>
 
                                 </li>
@@ -163,14 +163,10 @@
 
             <ui:insert name="page_content"></ui:insert>
 
-
-
-
-
             <div id="footer">
                 <div class="container">
                     <hr/>
-                    <p class="text-muted">Powered by ITCS, Integrated Solutions. <a href="http://www.itcs.cl">www.itcs.cl</a></p>
+                    <p class="text-muted">Powered by GoDesk. <a href="http://www.godesk.cl">www.godesk.cl</a></p>
                 </div>
             </div>
 
