--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -15,7 +15,7 @@
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
             <title>#{applicationBean.helpdeskTitle}</title>      
             
-            <ui:include src="newRelicScript.xhtml"/>
+            <ui:include src="diagnosticScripts.xhtml"/>
 
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
             <h:outputStylesheet library="awesome" name="css/font-awesome.css"/>
