--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -218,7 +218,7 @@
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
                                     
-                                    <p:menuitem value="Reports" ajax="false" action="#{reportChartController.prepareList()}" icon="fa fa-bar-chart-o">
+                                    <p:menuitem value="Reports" ajax="false" action="#{reportChartController.prepareList()}" icon="fa fa-bar-chart-o" rendered="false">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
                                 </p:submenu>
