--- a/src/main/webapp/script/usuario/myAccount.xhtml
+++ b/src/main/webapp/script/usuario/myAccount.xhtml
@@ -23,9 +23,7 @@
 
                 <p:messages showDetail="true"/>
 
-                <p:tabView id="tabView" effect="fade" effectDuration="normal" dynamic="true" cache="true" activeIndex="#{UserSessionBean.activeIndexOfMyAccount}">  
-
-                    <p:tab title="Datos Personales"> 
+                  <p:fieldset legend="Datos Personales"> 
                         <h:panelGrid columns="3" cellpadding="6">
                             <h:outputLabel value="Rut" for="rut" style="font-weight:bold"/>
 
@@ -69,10 +67,12 @@
                             <p:message for="telMovil" />
 
                         </h:panelGrid>
-                    </p:tab>
+                  </p:fieldset>
+                
+                <br/>
 
 
-                    <p:tab title="Datos del Sistema"> 
+                    <p:fieldset legend="Datos del Sistema"> 
 
                         <h:panelGrid columns="2" cellpadding="6">
                             <h:outputLabel value="#{bundle.EditUsuarioLabel_idUsuario}" for="idUsuario" style="font-weight:bold"/>
@@ -115,9 +115,9 @@
                             </p:dataTable>
 
                         </h:panelGrid>
-                    </p:tab>
-
-                    <p:tab title="Preferencias"> 
+                    </p:fieldset>
+<br/>
+                    <p:fieldset legend="Preferencias"> 
 
                         <h:panelGrid columns="3" cellpadding="6">
                             <h:outputLabel value="Tema de colores:" for="statefulSwitcher"/> 
@@ -149,9 +149,9 @@
 
 
 
-                    </p:tab>
-
-                    <p:tab title="Notificaciones"> 
+                    </p:fieldset>
+<br/>
+                    <p:fieldset legend="Notificaciones"> 
                         <div class="panel panel-transparent form-horizontal">
                             <div class="panel-body">
 
@@ -222,9 +222,8 @@
                         </div>
 
 
-                    </p:tab>
+                    </p:fieldset>
 
-                </p:tabView>
 
                 <br/>
 
