--- a/src/main/webapp/script/producto/Edit.xhtml
+++ b/src/main/webapp/script/producto/Edit.xhtml
@@ -434,7 +434,7 @@
                                      maxlength="40"/>
 
                         <h:outputLabel value="Dirección:" for="direccion" style="font-weight: bold"/>
-                        <p:inputTextarea id="direccion" value="#{productoController.currentSubComponente.direccion}" 
+                        <p:inputTextarea id="direccion" value="#{productoController.currentSubComponente.direccionMunicipal}" 
                                          title="#{bundle.CreateSubComponenteTitle_nombre}" 
                                          style="width: 100%;"/>
 
