--- a/src/main/webapp/mobile/index.xhtml
+++ b/src/main/webapp/mobile/index.xhtml
@@ -58,7 +58,7 @@
                 <p:growl  id="growl" />
 
                 <h:form id="vistasForm">
-                    <p:dataList type="ordered" value="#{casoController.getAllVistasItems(UserSessionBean.current)}" var="vista1" 
+                    <p:dataList type="ordered" value="#{casoController.getAllAgentVistasItems()}" var="vista1" 
                                 emptyMessage="empty">
                         <p:column>                            
                             <p:commandLink id="link1" value="#{vista1.nombre}" style="font-weight: bold"
